tests/integration/snapshots/integration__redaction__user_json_flags.snap
---
source: tests/integration/redaction.rs
expression: "&User {\n        id: 122,\n        username: \"jason_doe\".to_string(),\n        flags: vec![\"zzz\".into(), \"foo\".into(), \"aha\".into(),\n                    \"is_admin\".into()].into_iter().collect(),\n    }"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "flags": [
    "aha",
    "foo",
    "is_admin",
    "zzz"
  ]
}
