tests/integration/snapshots/integration__redaction__user_json_settings_callback.snap
---
source: tests/integration/redaction.rs
expression: "&User {\n        id: 1234,\n        username: \"jason_doe\".to_string(),\n        email: Email(\"jason@example.com\".to_string()),\n        extra: \"extra here\".to_string(),\n    }"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "email": "jason@example.com",
  "extra": "extra here"
}
