tests/integration/snapshots/integration__redaction__user_ron.snap
---
source: tests/integration/redaction.rs
expression: "&User {\n        id: 53,\n        username: \"john_ron\".to_string(),\n        email: Email(\"john@example.com\".to_string()),\n        extra: \"\".to_string(),\n    }"
---
User(
  id: "[id]",
  username: "john_ron",
  email: Email("john@example.com"),
  extra: "",
)
