tests/integration/snapshots/integration__redaction__with_random_value_csv_match.snap
---
source: tests/integration/redaction.rs
expression: "&User {\n        id: 44,\n        username: \"julius_csv\".to_string(),\n        email: Email(\"julius@example.com\".to_string()),\n        extra: \"\".to_string(),\n    }"
---
id,username,email,extra
[id],julius_csv,julius@example.com,
