tests/integration/snapshots/integration__redaction__with_random_value_json_settings2.snap
---
source: tests/integration/redaction.rs
expression: "&User {\n        id: 975,\n        username: \"jason_doe\".to_string(),\n        email: Email(\"jason@example.com\".to_string()),\n        extra: \"ssn goes here\".to_string(),\n    }"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "email": "jason@example.com",
  "extra": "[extra]"
}
