tests/integration/snapshots/integration__redaction__with_random_value_toml_match.snap
---
source: tests/integration/redaction.rs
expression: "&User {\n        id: 53,\n        username: \"john_ron\".to_string(),\n        email: Email(\"john@example.com\".to_string()),\n        extra: \"\".to_string(),\n    }"
---
id = '[id]'
username = 'john_ron'
email = 'john@example.com'
extra = ''
